--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "clsx": "^2.1.1",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.4",
-    "framer-motion": "^11.2.11",
+    "framer-motion": "^11.18.2",
     "next": "14.2.4",
     "postcss": "8.4.38",
     "react": "18.3.1",
@@ -26,6 +26,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.3",
+    "react-simple-typewriter": "^5.0.1",
     "react-vertical-timeline-component": "^3.6.0",
     "resend": "^0.16.0",
     "tailwindcss": "3.4.4",
